[Refactor] d5 api 반환값 수정